# face-me

./: .dev.env  .gitignore  face-me.py
cloud_formation/: cdk.json  package-lock.json  package.json
cloud_formation/cdk.out/: CloudFormationStack.assets.json  CloudFormationStack.template.json  FaceMeStack.assets.json  FaceMeStack.template.json  manifest.json  tree.json
cloud_formation/lib/: face_me-stack.ts
compose_app/: .graphqlconfig.yml  build.gradle  settings.gradle
compose_app/amplify/: team-provider-info.json
compose_app/amplify/.config/: project-config.json
compose_app/amplify/backend/: backend-config.json
compose_app/amplify/backend/api/facemeapp/: cli-inputs.json  parameters.json  schema.graphql
compose_app/amplify/backend/auth/facemeappf5253412/: cli-inputs.json
compose_app/amplify/backend/auth/facemeappfed9132f/: cli-inputs.json
compose_app/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
compose_app/app/: build.gradle  google-services.json
compose_app/app/src/androidTest/java/com/faceme/faceme/: ExampleInstrumentedTest.kt
compose_app/app/src/main/: AndroidManifest.xml
compose_app/app/src/main/graphql/: schema.json
compose_app/app/src/main/java/com/faceme/faceme/: FaceMeApplication.kt  FaceMeFirebaseMessagingService.kt  MainActivity.kt  SNSConfiguration.kt
compose_app/app/src/main/java/com/faceme/faceme/data/: AppConatinerImpl.kt
compose_app/app/src/main/res/drawable/: ic_faceme_logo.xml
compose_app/app/src/main/res/values/: strings.xml  themes.xml
compose_app/app/src/test/java/com/faceme/faceme/: ExampleUnitTest.kt
compose_app/gradle/wrapper/: gradle-wrapper.properties
mobile_app/: README.md  pubspec.yaml
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/ios/Runner/: Info.plist
mobile_app/lib/: HomePage.dart  RegisterUser.dart  SignInPage.dart  VideoPlayerScreen.dart
on_device/: camera_observer.py  demo.py  face-me.py  mqtt_connection.py
on_device_c/: .gitignore  CMakeLists.txt  main.cpp
on_device_c/CMake/: Utilities.cmake
on_device_c/CMake/Dependencies/: libKinesisVideoProducer-CMakeLists.txt
(+38 files in other folders)
